# ffreis-python-onnx-model-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  convert_to_onnx.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: architecture.yml  build-containers.yml  build-python.yml  code-quality.yml  code-review.yml  code-security.yml  commit-checks.yml  coverage.yml  deepsource.yml  e2e.yml  examples.yml  grype.yml  hypothesis-integration.yml  integration.yml  lint.yml  snyk.yml  trivy.yml
container/: Dockerfile.autosklearn1  Dockerfile.autosklearn2  Dockerfile.base-runner  Dockerfile.cli  Dockerfile.example-base  Dockerfile.example-compare-sklearn  Dockerfile.example-optuna-sklearn  Dockerfile.example-pytorch  Dockerfile.example-sklearn  Dockerfile.example-sklearn-custom-cli  Dockerfile.example-tensorflow  Dockerfile.services  Dockerfile.uv-builder
container/examples/: Dockerfile.example-autosklearn1  Dockerfile.example-autosklearn2  Dockerfile.example-pytorch
docs/: architecture.md  converter.md  openapi.yaml  plugin-authoring.md
examples/: autosklearn_plugin.py  autosklearn_roundtrip.py  compare_sklearn_vs_onnx.py  custom_sklearn_transformer.py  optuna_sklearn_example.py  pytorch_example.py  sklearn_custom_cli_example.py  sklearn_example.py  smoke_api_grpc.py  tensorflow_example.py
onnx_converter/: __init__.py  pytorch_converter.py  sklearn_converter.py  tensorflow_converter.py
scripts/: check_architecture.py  check_dependencies_sync.py  check_openapi.py  check_orchestrator_complexity.py  generate_requirements.py
src/converter_grpc/: converter_pb2.py
tests/: conftest.py
(+61 files in other folders)
